--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,6 +1,7 @@
 ---
 layout: "@layouts/Markdown.astro"
 ---
+import { metadata } from "src/metadata"
 
 # About Me
 
@@ -8,4 +9,5 @@ I'm a web developer from Arizona who loves identifying and solving the many smal
 
 My freelancing company [Branta Web](https://brantaweb.com/) has helped researchers, artists, and professionals improve their online presence.
 
-Get in touch with me at [parker@birdsmakesound.com](mailto:parker@birdsmakesound.com)
+Get in touch with me at [{metadata.email}]({metadata.email})
+
