--- a/src/content/blog/scrolling-turkey-part-ii/index.mdx
+++ b/src/content/blog/scrolling-turkey-part-ii/index.mdx
@@ -9,6 +9,7 @@ tags:
     - turkeys
 draft: false
 ---
+import Turkey from '@components/turkey/Turkey.svelte'
 
 In my last post I made a [scrolling turkey](/blog/scrolling-turkey) but quickly realized, it needed to gobble.
 
@@ -84,12 +85,4 @@ window.addEventListener('load', () => {
 
 As a result, I am filled with delight.
 
-<div class="turkey-container"><div class="turkey">
-{% image "./turkey/turkey.png", "Don't click me" %}
-</div></div>
-
-{% css %}{% include "./turkey/turkey.css" %} {% endcss %}
-{% js %}
-{% include "./turkey/sprite.js" %}
-{% include "./turkey/turkey.js" %}
-{% endjs %}
+<Turkey client:visible />
