--- a/src/content/projects/evs/index.mdx
+++ b/src/content/projects/evs/index.mdx
@@ -21,11 +21,12 @@ date: 2023-11-16
 
 ## Links
 
-{% include "components/project-links.njk" %}
+<ProjectLinks githubUrl={frontmatter.githubUrl} liveUrl={frontmatter.liveUrl} />
+
 
 ## Screenshot
 
-{% animatedImage "./EVS-action4.gif", "EVS in action" %}
+![Animation showing EVS app in action](./EVS-action4.gif)
 
 ## Overview
 
@@ -59,4 +60,4 @@ My contributions and accomplishments were officially recognized by Opportunity H
 -   Code Quality
 -   Unit Test Writing
 
-{% image "./opportunity_hack_hearts.png", "Opportunity Hack hearts" %}
+![Certificate of Opportunity Hack hearts](./opportunity_hack_hearts.png)
