--- a/src/content/projects/harmonic-clouds/index.mdx
+++ b/src/content/projects/harmonic-clouds/index.mdx
@@ -16,11 +16,10 @@ tags:
 
 ## Links
 
-{% include "components/project-links.njk" %}
+<ProjectLinks githubUrl={frontmatter.githubUrl} liveUrl={frontmatter.liveUrl} />
 
 ## Screenshot
 
-{% image "./harmonic-clouds.png", "Screenshot of harmonic clouds" %}
 ![Screenshot of harmonic clouds](./harmonic-clouds.png)
 
 ## Desciption
