--- a/src/content/projects/rba/index.mdx
+++ b/src/content/projects/rba/index.mdx
@@ -21,11 +21,11 @@ date: 2023-11-16
 
 ## Links
 
-{% include "components/project-links.njk" %}
+<ProjectLinks githubUrl={frontmatter.githubUrl} liveUrl={frontmatter.liveUrl} />
 
 ## Screenshot
 
-{% image "./rba-dark3.png", "Screenshot of Rare Bird Alert!" %}
+![Screenshot of Rare Bird Alert!](./rba-dark3.png)
 
 ## Overview
 
