--- a/src/content/projects/raincrow/index.mdx
+++ b/src/content/projects/raincrow/index.mdx
@@ -19,11 +19,11 @@ date: 2023-11-16
 
 ## Links
 
-{% include "components/project-links.njk" %}
+<ProjectLinks githubUrl={frontmatter.githubUrl} liveUrl={frontmatter.liveUrl} />
 
 ## Screenshot
 
-{% image "./raincrow-inthewild.jpg", "Raincrow being used while birding" %}
+![Raincrow being used while birding](./raincrow-inthewild.jpg)
 
 ## Background
 
@@ -35,10 +35,10 @@ As a somewhat obsessive eBird user, I like to include weather observations in th
 
 To get weather data for a checklist that is already submitted to eBird, all the user has to do is input the checklist ID (or the entire URL) for a checklist and click "Get Weather". The app gathers the weather conditions for the location and duration of the checklist and displays them below the input form. The data is copied with the "Copy to Clipboard" button and can now be pasted in the comments section for a given checklist.
 
-{% image "./raincrow-screen1.png", "RainCrow eBird Weather submitted screenshot" %}
+![RainCrow eBird Weather submitted screenshot](./raincrow-screen1.png)
 
 If the user wants to gather weather data before a checklist is submitted, they can use the "Pre-Submit" form. This removes the need to edit a checklist after submitting it. It is especially useful for shared checklists, allowing weather observations to be shared with all observers.
 
 It does require more input from the user, but I tried to make the input as painless as possible. The locate button automatically inputs your current GPS coordinates. The date and start time automatically pre-fill the current date and the time rounded down to the nearest hour. The duration accepts minutes, mimicking data fields on eBird.
 
-{% image "./pre-submit.png", "RainCrow eBird Weather pre-submit screenshot" %}
+![RainCrow eBird Weather pre-submit screenshot](./pre-submit.png)
