Add RSS feed for combined posts

--- a/src/content/blog/scrolling-turkey/index.mdx
+++ b/src/content/blog/scrolling-turkey/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: I added a scrolling turkey to my links page and you can too
-description: Gobble gobble
+description: Gobble gobble.
 date: 2023-11-22
 tags:
     - css
