--- a/src/content/blog/weekly-update-2024/index.mdx
+++ b/src/content/blog/weekly-update-2024/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: '[Monthly Update] Happy 2024!'
-description: After an eventful holiday season, it's time to resume regular updates
+description: After an eventful holiday season, it's time to resume regular updates.
 date: 2024-01-29
 updatedOn:
 tags:
