--- a/src/content/blog/ebird-bookmarklet/index.mdx
+++ b/src/content/blog/ebird-bookmarklet/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: eBird Compress, my first bookmarklet
-description: I create my first bookmarklet to group eBird sightings by species
+description: I create my first bookmarklet to group eBird sightings by species.
 date: 2023-11-20
 tags:
     - bookmarklet
