--- a/src/content/blog/weekly-update-2024/index.mdx
+++ b/src/content/blog/weekly-update-2024/index.mdx
@@ -25,7 +25,7 @@ I'm back from a brief blog hiatus. January is quickly coming to a close so I fig
 
 ...and I got engaged!
 
-<ConfettiWrapper>
+<ConfettiWrapper client:load>
 ![The happy couple engaged](./engaged.jpg)
 </ConfettiWrapper>
 
