--- a/src/content/blog/2024-06-26-quail/index.mdx
+++ b/src/content/blog/2024-06-26-quail/index.mdx
@@ -16,10 +16,10 @@ import LikeButton from '@components/LikeButton.svelte'
 
 Quails are wonderful creatures. Here's one for you to click. 
 <div class="w-fit">
-    <LikeButton url="quail-post" client:only />
+    <LikeButton url="inline-quail-post" client:only />
 </div>
 
-Here is the SVG at a larger scale. I created this SVG, loading in a photo and tracing geometric shapes on top of it using Pixelmator Pro, then exporting the shapes to SVG.
+Here is the SVG for the quail at a larger scale. I created it by loading photo into Pixelmator Pro and tracing geometric shapes on top of it. I can then export the shapes to SVG, and there you have it. Vector graphics.
 <div class="max-w-sm mx-auto">
 
 ![Quail](src/icons/gaqu.svg)
@@ -91,4 +91,4 @@ function playSound() {
 
 ## Ported Portfolio to Astro
 
-Part of why I can do this more easily is I ported my portfolio to Astro. I can drop a Quail svelte component in, call a dynamic API route that lives within my project structure that interacts with a database, I'm using Astro DB.
+Part of why I can do this more easily is I ported my portfolio to Astro. I can drop a Quail svelte component in, call a dynamic API route that lives within my project structure that interacts with a database, I'm using Astro DB. In working on the CCAM website, I came to appreciate how Astro will default to static and performant, but when I need something more dynamic, I can pepper that in.
