--- a/src/content/blog/2024-05-27-quail/index.mdx
+++ b/src/content/blog/2024-05-27-quail/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quail Counter
-description: Now you can show your appreciate for my posts by clicking on a quail.
+description: Now you can show your appreciation for my posts by clicking on a quail.
 date: 2024-05-27
 tags:
     - svg
