Fix missing image for bird-music-cognition

--- a/src/content/blog/2024-03-birds-music-cognition/index.mdx
+++ b/src/content/blog/2024-03-birds-music-cognition/index.mdx
@@ -95,7 +95,7 @@ As the starling hears it, this apparently sounds the most similar! They performe
 
 While these sound very different to our ears, if you squint at the spectrograms for these sounds, it starts to make more sense.
 
-{/* {% image "./spectrograms-c.png", "Spectrogram of test stimuli" %} */}
+![Spectrogram of test stimuli](./spectrograms-c.png)
 
 Moving from left to right in each spectrogram, visually the first note looks like a short building, then a taller building, shorter building, and then the tallest building. The training stimuli have stronger lines because they are more tonal, while the noise vocoded stimuli are visually more fuzzy and therefore noisy – but the overall spectral shape and pattern of the "buildings" is similar.
 
