Action test in prod

--- a/src/content/blog/2024-06-comments.mdx
+++ b/src/content/blog/2024-06-comments.mdx
@@ -23,11 +23,15 @@ Again, this is difficult to do with a purely static site without javascript jank
 
 Most of the functionality is within my Astro project. API routes, Astro DB. Its pretty nice. I roped in val.town to handle the email notification functionality. 
 
-I started using experimental Astro actions, which was quite nice at cutting down on form related boilerplate. It is an experimental feature, so it is not completed yet, but I thought YOLO. It worked great on my local dev server but surprise surprise, it didn't work in production (Netlify). 
+I started using experimental Astro actions, which was quite nice at cutting down on form related boilerplate. It is an experimental feature, so it is not completed yet, but I thought YOLO. It worked great on my local dev server but surprise surprise, it didn't work in production (Netlify). But, in trying to reproduce the problem – maybe it is not a problem? Need to try again in here.
 
 More than MVP features:
 - ability to hide comments
 - ability to report comments, I get notified via email and I can quickly click a link to delete the comment if needed
+
+## Val.town Email Notifications
+[Notifications for new comments](https://www.val.town/v/parkerdavis/newCommentNotification)
+[Notifications for report button](https://www.val.town/v/parkerdavis/reportCommentNotification)
 
 
 ## Progressive Enhancement:
