--- a/src/content/blog/2024-06-comments.mdx
+++ b/src/content/blog/2024-06-comments.mdx
@@ -63,3 +63,7 @@ const result = await fetch(POST_COMMENT_ENDPOINT, {
     body: new URLSearchParams({ ...comment }),
 });
 ```
+
+Trying actions again.
+
+Server functions are not working.
