Added related posts for projects, include BMS

--- a/src/content/projects/_project-template.mdx
+++ b/src/content/projects/_project-template.mdx
@@ -10,6 +10,7 @@ date:
 draft: true
 tags:
 ---
+import RelatedPosts from '@components/RelatedPosts.astro'
 
 ## Links
 
@@ -18,3 +19,7 @@ tags:
 ## Screenshot
 
 ![alt](image/path)
+
+## Posts related to {{}}
+
+<RelatedPosts tag="{{}}">
