--- a/src/content/projects/evs/index.mdx
+++ b/src/content/projects/evs/index.mdx
@@ -18,6 +18,7 @@ githubUrl: https://github.com/opportunity-hack/evs
 featured: true
 date: 2023-11-16
 ---
+import RelatedPosts from '@components/RelatedPosts.astro'
 
 ## Links
 
@@ -61,3 +62,7 @@ My contributions and accomplishments were officially recognized by Opportunity H
 -   Unit Test Writing
 
 ![Certificate of Opportunity Hack hearts](./opportunity_hack_hearts.png)
+
+## Posts tagged with "EVS"
+
+<RelatedPosts tag="evs" />
