--- a/src/content/projects/rba/index.mdx
+++ b/src/content/projects/rba/index.mdx
@@ -18,6 +18,7 @@ liveUrl: https://rarebird.parkerdavis.dev/US-AZ-013?days=7
 featured: true
 date: 2023-11-16
 ---
+import RelatedPosts from '@components/RelatedPosts.astro'
 
 ## Links
 
@@ -32,3 +33,6 @@ date: 2023-11-16
 I created this full stack multi-page app using Sveltekit and TailwindCSS. It uses eBird's own RESTful API to gather and summarize large amounts of data with sorting and grouping by species and location, greatly reducing window scroll height when compared to eBird original design. It is progressively enhanced with essential data being loaded with no client-side javascript required.
 
 For the design, I incorporated some of the more modern design elements found in other parts of eBird such as boldly colored title and filter bars, filter tags, as well as incorporating fades and slide-in animations for details and filter modals.
+
+## Posts tagged with "RBA"
+<RelatedPosts tag="rba" bmsTitles={['Slow Doves (and updates)']} />
