--- a/src/content/blog/2024-year-in-review/index.mdx
+++ b/src/content/blog/2024-year-in-review/index.mdx
@@ -18,7 +18,7 @@ Nell and I went to the Chiricahuas in March to camp with our friend Iza. It snow
 
 <br />
 
-As Nell and I decided whether to buy the house we live in and replace the roof in order to keep the house insured, the ground fell out from under my feet. One moment I was on solid ground, flagstone and concrete outside our kitchen window, next I was standing in a black greasy crater filled with mosquitos and roaches. I said to Nell, "This is a sign. We can't buy this house."
+As Nell and I decided whether to buy the house we live in and replace the roof in order to keep the house insured, the ground fell out from under my feet. One moment I was standing on the flagstone and concrete outside our kitchen window, next I was standing knee-deep in a black greasy crater filled with mosquitos and roaches. I said to Nell, "This is a sign. We can't buy this house."
 
 ![Scary black sludge coming out of crater in ground](./greasepit.png)
 
@@ -26,7 +26,7 @@ We decided to buy the house.
 
 <br />
 
-We went to Memphis/Arkansas to see the total solar eclipse in April with some old friends. I really can't recommend experiencing a total solar eclipse enough. [Nell published a beautiful lyrical essay](https://nellsmithwriter.com/2024/09/27/essay-in-southern-humanities-review-fragments-of-bone-fragments-of-light/) partly about our experience of the 2018 eclipse in Wyoming.
+We went to Memphis/Arkansas to see the total solar eclipse in April with some old friends. I really can't recommend experiencing a total solar eclipse enough. [Nell published a beautiful lyrical essay](https://nellsmithwriter.com/2024/09/27/essay-in-southern-humanities-review-fragments-of-bone-fragments-of-light/) partly inspired by the 2018 eclipse in Wyoming.
 
 ![Sun blocked out by the moon in Arkansas forest](./eclipse.png)
 
@@ -50,11 +50,13 @@ We got Goose a fancy water fountain. He loves it.
 
 Nell got a beautiful wedding dress on discount from a very strange store in the Prescott Mall.
 
-I had some pre-melanoma removed from my right shin by a very strange dermatologist.
+I had some melanoma removed from my shin by a very strange dermatologist.
 
 Nell and I tripled or quadrupled our house plants. Nell mulched the yard. I built a [home](https://www.robinsloan.com/notes/home-cooked-app/) [cooked](https://maggieappleton.com/home-cooked-software) plant watering app.
 
-An old friend and my uncle both died suddenly in the fall and winter.
+An old friend and my uncle died suddenly in the fall and winter.
+
+I got to celebrate life with old friends and family I hadn't seen in a long time.
 
 I became an eBird reviewer for Maricopa county.
 
@@ -86,7 +88,8 @@ I saw a [Yellow-breasted Chat](https://ebird.org/checklist/S194355113) from my p
 
 ![Yellow-breasted Chat on a pool fence](./chat.png)
 
----
+<Spacer />
+
 
 A lot happened. Some of it was great, some of it was terrible. A lot of it was stressful and a lot of groundwork was laid for a hopefully calmer, fruitful year ahead, at least in our corner of the world.
 
