--- a/src/content/blog/2024-year-in-review/index.mdx
+++ b/src/content/blog/2024-year-in-review/index.mdx
@@ -84,7 +84,11 @@ In July, I turned 36 and my grandmother turned 101.
 
 [I got a new job](/blog/2024-08-new-job/). We got Goose a fancy water fountain. He loves it. 
 
-Nell got a beautiful wedding dress on discount from a very strange store in the Prescott Mall. I had some melanoma removed from my shin by a very strange dermatologist.
+{/* Nell got a beautiful wedding dress on discount from a very strange store in the Prescott Mall.  */}
+
+Nell and I went to the Prescott Mall. We stopped in to get samosas and mango lassi from an Indian food / Disney + Harry Potter themed english tea room called Mr. Moussetache Cafe. A store across the walkway called Foot Fetish Clothing Company beckoned us to explore the mall more. We wandered into a general store with no name having a going out of business sale. Nell found a beautiful wedding dress.
+
+I had some melanoma removed from my shin by a constantly cursing dermatologist.
 
 Nell and I tripled or quadrupled our house plants. Nell mulched the yard. I built a [home](https://www.robinsloan.com/notes/home-cooked-app/) [cooked](https://maggieappleton.com/home-cooked-software) plant watering app.
 
