View transitions, post tweaks

--- a/src/content/blog/2024-year-in-review/index.mdx
+++ b/src/content/blog/2024-year-in-review/index.mdx
@@ -1,16 +1,22 @@
 ---
 title: 2024 Year in Review
 description: Reflecting on the year passed
-date: 2025-01-20
+date: 2025-02-01
 updatedOn:
 tags:
     - updates
     - '2024'
+    - birds
+    - birding
+    - camping
+    - house-work
+    - sludge
+    - house-plants
+    - friends
+    - family
 draft: false
 ---
 import Spacer from 'src/components/Spacer.astro'
-import FamilyBeach from 'src/content/blog/2024-year-in-review/familybeach.png'
-import Geoff from './geoff.png'
 
 I saw 9 life birds.
 
@@ -86,17 +92,17 @@ In July, I turned 36 and my grandmother turned 101.
 
 {/* Nell got a beautiful wedding dress on discount from a very strange store in the Prescott Mall.  */}
 
-Nell and I went to the Prescott Mall. We stopped in to get samosas and mango lassi from an Indian food / Disney + Harry Potter themed english tea room called Mr. Moussetache Cafe. A store across the walkway called Foot Fetish Clothing Company beckoned us to explore the mall more. We wandered into a general store with no name having a going out of business sale. Nell found a beautiful wedding dress.
+Nell and I went to the Prescott Mall. We stopped in to get samosas and mango lassi from an Indian food / Disney + Harry Potter themed english tea room called Mr. Moussetache Cafe. A store across the walkway called Foot Fetish Clothing Company inspired us to explore the mall more. We wandered into a general store with no name having a going-out-of-business sale. Nell found a beautiful wedding dress.
 
 I had some melanoma removed from my shin by a constantly cursing dermatologist.
 
 Nell and I tripled or quadrupled our house plants. Nell mulched the yard. I built a [home](https://www.robinsloan.com/notes/home-cooked-app/) [cooked](https://maggieappleton.com/home-cooked-software) plant watering app.
 
-An old friend and my uncle died suddenly in the fall and winter. I got to celebrate life with old friends and family.
+My old friend Geoff and my uncle Steve died suddenly in the fall and winter. I got to celebrate life with old friends and family.
 
-![old friends](./geoff.png)
+![Group photo with old friends](./geoff.png)
 
-![familybeach](./familybeach.png)
+![Family at the beach](./familybeach.png)
 
 <Spacer />
 
