Add CCAM github link

--- a/src/content/projects/ccam/index.mdx
+++ b/src/content/projects/ccam/index.mdx
@@ -4,7 +4,7 @@ description: Custom site for Chicago Arts non-profit.
 techtags:
     - html
     - css
-githubUrl:
+githubUrl: https://github.com/Center-Abstract-Concrete-Machines/CCAM
 liveUrl: https://ccam.world
 featured: false
 date: 2024-06-05
