--- a/src/content/blog/2025-10-listers.mdx
+++ b/src/content/blog/2025-10-listers.mdx
@@ -11,7 +11,7 @@ import { YouTube } from 'astro-embed';
 
 *Listers* is a comedic documentary film about two brothers who decide to do a Lower 48 Big Year while living out of their minivan to learn what birding is all about. The joys and absurdities of birding are on display in equals parts. 
 
-From [Nicolas Lund's article in Slate](https://slate.com/culture/2025/09/listers-documentary-youtube-birding-birdwatching-movie-ebird.html):
+From [Nick Lund's article in Slate](https://slate.com/culture/2025/09/listers-documentary-youtube-birding-birdwatching-movie-ebird.html):
 
 
 > They have the kind of easygoing, infectious, and filthy banter that only exists between two siblings on a road trip, and the most enjoyable parts of the documentary [...] are the times when they’re just hanging out in their minivan. Quentin, with his mullet and drawl, is a natural in front of the camera, and Owen [...] balances the grainy handycam footage of the moments when the brothers are most beaten down with truly gorgeous, high-definition video of the birds they’ve found.
