--- a/src/content/blog/2025-10-listers.mdx
+++ b/src/content/blog/2025-10-listers.mdx
@@ -18,8 +18,8 @@ From [Nick Lund's article in Slate](https://slate.com/culture/2025/09/listers-do
 
 > What many other birders and I love about *Listers* [...] is that it’s the first time we’ve seen “real” birding on screen. This is the birding of gas stations, ponds behind a women’s prison, and “the bird’s right there on the mud next to the Wiffle ball and the tire.”
 
-It deftly touches on so many aspects of birding culture with a sly grin and a wink. For birders, their trials and tribulations are just so relatable. There is a decent showing from the Arizona birding community as well -- props to Robert for being one of the most reasonable-seeming people interviewed in the movie. Did I mention it was funny? It is surprisingly funny. 
+It deftly touches on so many aspects of birding with a sly grin and a wink. For birders, their trials and tribulations are just so relatable. There is a decent showing from the Arizona birding community as well -- props to Robert for being one of the most reasonable-seeming people interviewed in the movie. Did I mention it was funny? It is surprisingly funny. 
 
-Give it a watch:
+Give it a watch on [YouTube](https://www.youtube.com/watch?v=zl-wAqplQAo):
 
 <YouTube id="https://www.youtube.com/watch?v=zl-wAqplQAo" />
